--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "com.app.TODOapp"
         minSdk 21
         targetSdk 31
-        versionCode 4
+        versionCode 6
         versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -34,10 +34,11 @@ android {
 apply plugin: 'kotlin-kapt'
 dependencies {
     def room_version = "2.3.0"
-
+    def fragment_version = "1.3.6"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-kapt "androidx.room:room-compiler:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.core:core-ktx:1.6.0'
